# jackdaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  project.jsn
crates/jackdaw_animation/: Cargo.toml
crates/jackdaw_animation/src/: blend_graph.rs  clip.rs  compile.rs  lib.rs  player.rs  timeline.rs
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_api/src/: lib.rs
crates/jackdaw_api_macros/: Cargo.toml
crates/jackdaw_api_macros/src/: lib.rs
crates/jackdaw_avian_integration/: Cargo.toml
crates/jackdaw_avian_integration/src/: lib.rs  simulation.rs
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_camera/src/: lib.rs
crates/jackdaw_csg/: Cargo.toml  README.md
crates/jackdaw_csg/src/: lib.rs
crates/jackdaw_csg/tests/: beveled_cube_subtract.rs  box_cutter_against_concave.rs  corner_bite_subtract.rs
crates/jackdaw_dylib/: Cargo.toml
crates/jackdaw_editor/: Cargo.toml
crates/jackdaw_editor/src/: alignment_guides.rs  asset_catalog.rs  builtin_extensions.rs  cache_manager.rs  custom_properties.rs  document_ops.rs  editor_resolver.rs  entity_templates.rs  ext_build.rs  face_grid.rs  headless.rs  hot_reload.rs  keybind_focus.rs  keybind_settings.rs  layout.rs  lib.rs  material_preview.rs  migration.rs  modal_transform.rs  new_project.rs  operator_routing.rs  physics_brush_bridge.rs  pie.rs  pie_camera.rs  project.rs  project_files.rs  project_ops.rs  project_select.rs  scene_io.rs  selection.rs  setup_flow.rs  viewport.rs
crates/jackdaw_editor/src/brush/: csg.rs  geometry.rs  gizmo_overlay.rs  mesh.rs
crates/jackdaw_editor/src/inspector/: component_picker.rs  material_display.rs  reflect_fields.rs
crates/jackdaw_editor/src/navmesh/: visualization.rs
crates/jackdaw_editor/src/remote/: brp.rs  connection.rs  entity_browser.rs  mod.rs  panel.rs  registry_fetch.rs
crates/jackdaw_editor/src/terrain/: mesh.rs
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_feathers/examples/: picker.rs  split_panels.rs
crates/jackdaw_feathers/src/: alert.rs  button.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  cursor.rs  dialog.rs  file_browser.rs  icons.rs  inspector_field.rs  lib.rs  list_view.rs  menu_bar.rs  panel_header.rs  panel_section.rs  picker.rs  popover.rs  progress.rs  scroll.rs  separator.rs  split_panel.rs  status_bar.rs  text_edit.rs  toast.rs  tokens.rs  tooltip.rs  tree_view.rs  utils.rs  variant_edit.rs  vector_edit.rs
crates/jackdaw_feathers/src/color_picker/: controls.rs  input_fields.rs  materials.rs  mod.rs  setup.rs  visuals.rs
crates/jackdaw_fuzzy/: Cargo.toml
crates/jackdaw_fuzzy/src/: lib.rs
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_geometry/src/: lib.rs  newell.rs  topology.rs  topology_convexity.rs  triangulate.rs
crates/jackdaw_geometry/src/bmesh/: cycles.rs  flatten.rs  lift.rs  mod.rs  select.rs  (+2 more)
crates/jackdaw_geometry/tests/: bmesh_bridge.rs  bmesh_connect_verts.rs  bmesh_contextual_create.rs  bmesh_cycles.rs  bmesh_dissolve_edges.rs  bmesh_dissolve_faces.rs  bmesh_dissolve_verts.rs  bmesh_edge_slide.rs  bmesh_edge_split.rs  bmesh_extrude.rs  bmesh_face_split.rs  bmesh_flatten.rs  bmesh_inset.rs  bmesh_lift.rs  bmesh_loop_cut.rs  bmesh_remove_doubles.rs  bmesh_select.rs  bmesh_subdivide.rs  bmesh_types.rs  bmesh_validate.rs  bmesh_vertex_slide.rs  diagnose_dissolve_render.rs  editmesh_bisect_plane.rs  editmesh_bridge.rs  editmesh_connect_verts.rs  editmesh_contextual_create.rs  editmesh_cycles.rs  editmesh_dissolve_edges.rs  editmesh_dissolve_faces.rs  editmesh_dissolve_verts.rs  editmesh_edge_bevel.rs  editmesh_edge_slide.rs  editmesh_edge_split.rs  editmesh_extrude.rs  editmesh_face_poke.rs  editmesh_face_retriangulate.rs  editmesh_face_split.rs  editmesh_flatten.rs  editmesh_inset.rs  editmesh_knife.rs  (+46 more)
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_jsn/src/: ast.rs  editor_meta.rs  format.rs  lib.rs  loader.rs  mesh_rebuild.rs  types.rs
crates/jackdaw_jsn/tests/: brush_bevel_pipeline.rs  brush_constructors.rs  clipboard_payload.rs
crates/jackdaw_loader/: Cargo.toml
crates/jackdaw_loader/src/: compat.rs  lib.rs
crates/jackdaw_localization/: Cargo.toml
crates/jackdaw_localization/src/: lib.rs
crates/jackdaw_node_graph/: Cargo.toml
crates/jackdaw_node_graph/examples/: demo.rs
crates/jackdaw_node_graph/src/: add_node_popover.rs  canvas.rs  commands.rs  connection.rs  gesture.rs  graph.rs  interaction.rs  lib.rs  materials.rs  node_widget.rs  registry.rs  selection.rs  sync.rs
crates/jackdaw_panels/: Cargo.toml
crates/jackdaw_panels/src/: add_window_popup.rs  area.rs  drag.rs  layout.rs  lib.rs  reconcile.rs  registry.rs  sidebar.rs  split.rs  tabs.rs  tree.rs  workspace.rs  workspace_tabs.rs
crates/jackdaw_remote/: Cargo.toml
crates/jackdaw_remote/src/: lib.rs  methods.rs  scene_snapshot.rs
crates/jackdaw_runtime/: Cargo.toml
crates/jackdaw_runtime/src/: extract.rs  lib.rs  sub_app.rs
crates/jackdaw_runtime/tests/: catalog_loading.rs  insert_observer_global_transform.rs
crates/jackdaw_sdk/: Cargo.toml
crates/jackdaw_sdk/src/: lib.rs
crates/jackdaw_widgets/: Cargo.toml
crates/jackdaw_widgets/src/: collapsible.rs  context_menu.rs  file_browser.rs  lib.rs  list_view.rs  menu_bar.rs  split_panel.rs  tree_view.rs
templates/extension-dylib/: .gitignore.template  Cargo.toml
templates/extension-dylib/src/: lib.rs
templates/game/: Cargo.toml  Cargo.toml.template  README.md  build.rs.template  exports.def  rust-toolchain.toml
templates/game-dylib/: .gitignore.template  Cargo.toml  cargo-generate.toml
templates/game-dylib/.cargo/: config.toml
templates/game-dylib/src/: lib.rs
templates/game-static/: .gitignore.template  Cargo.toml  Cargo.toml.template  README.md.template  cargo-generate.toml  post-generate.rhai
templates/game-static/.cargo/: config.toml
templates/game-static/src/: lib.rs  lib.rs.template  main.rs  main.rs.template
templates/game-static/tests/: template_components.rs.template
templates/game/.cargo/: config.toml
templates/game/src/: lib.rs  lib.rs.template  main.rs
tests/fixtures/test_fixture_extension/: Cargo.toml
(+362 files in other folders)
