[package]
name = "jackdaw_animation"
version = "0.4.1"
edition = "2024"
description = "Animation authoring and playback for the Jackdaw editor; thin UI over Bevy's AnimationClip / AnimationGraph / AnimationPlayer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"
include = ["src/**/*", "Cargo.toml", "LICENSE*"]

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_reflect.workspace = true
bevy_math.workspace = true
bevy_color.workspace = true
bevy_gltf.workspace = true
bevy_ui.workspace = true
bevy_text.workspace = true
bevy_picking.workspace = true
bevy_utils.workspace = true
bevy_log.workspace = true
bevy_asset.workspace = true
bevy_transform.workspace = true
bevy_input.workspace = true

bevy_animation.workspace = true
jackdaw_feathers.workspace = true
jackdaw_commands.workspace = true
jackdaw_node_graph.workspace = true
jackdaw_jsn.workspace = true
lucide-icons = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
