[package]
name = "jackdaw_api"
version = "0.4.0"
edition = "2024"
description = "Public API for Jackdaw editor extensions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
bevy_enhanced_input.workspace = true
jackdaw_api_internal.workspace = true
jackdaw_api_macros.workspace = true
jackdaw_commands.workspace = true
jackdaw_feathers.workspace = true
jackdaw_jsn.workspace = true
jackdaw_panels.workspace = true
jackdaw_runtime.workspace = true

[lints]
workspace = true
