[package]
name = "jackdaw_api_macros"
version = "0.4.1"
edition = "2024"
description = "Proc macros for jackdaw_api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
