[package]
name = "jackdaw_avian_integration"
version = "0.4.0"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
# `debug-plugin` enables avian's `PhysicsGizmoExt::draw_collider` and the
# `PhysicsGizmos` config group used by the editor's collider overlay.
avian3d = { workspace = true, features = ["debug-plugin"] }

[lints]
workspace = true
