[package]
name = "jackdaw_dylib"
version = "0.4.1"
edition = "2024"
description = "Shared dynamic library bundling jackdaw's extension-facing types. Mirrors `bevy_dylib`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[lib]
# The whole point of this crate: produce a single `.so` that the
# editor binary and every extension dylib link against, so all
# sides share one compiled copy of jackdaw's types (and therefore
# agree on `TypeId` identity).
crate-type = ["dylib"]

[dependencies]
# Every jackdaw crate whose types cross the extension boundary
# needs to have its compiled code end up inside this dylib.
jackdaw_api_internal.workspace = true
jackdaw_panels.workspace = true
jackdaw_commands.workspace = true

[lints]
workspace = true
