[package]
name = "jackdaw_feathers"
version = "0.4.1"
edition = "2024"
description = "Internal crate for the jackdaw editor"
repository = "https://github.com/jbuehler23/jackdaw"
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "LICENSE*", "fonts/**/*", "src/**/*"]

[dependencies]
bevy.workspace = true
bevy_easings.workspace = true
bevy_monitors.workspace = true
bevy_ui_text_input.workspace = true
jackdaw_fuzzy.workspace = true
jackdaw_jsn.workspace = true
jackdaw_widgets.workspace = true
lucide-icons.workspace = true

[lints]
workspace = true
