[package]
name = "jackdaw_feathers"
version = "0.4.1"
edition = "2024"
description = "Internal crate for the jackdaw editor"
repository = "https://github.com/jbuehler23/jackdaw"
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "LICENSE*", "fonts/**/*", "src/**/*"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_feathers.workspace = true
bevy_math.workspace = true
bevy_ui.workspace = true
bevy_ui_render.workspace = true
bevy_ui_widgets.workspace = true
bevy_picking.workspace = true
bevy_color.workspace = true
bevy_window.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_shader.workspace = true
bevy_asset.workspace = true
bevy_text.workspace = true
bevy_utils.workspace = true
bevy_derive.workspace = true
bevy_input.workspace = true
bevy_log.workspace = true
bevy_camera.workspace = true
bevy_time.workspace = true

bevy_input_focus.workspace = true
bevy_easings.workspace = true
bevy_monitors.workspace = true
bevy_ui_text_input.workspace = true
jackdaw_fuzzy.workspace = true
jackdaw_jsn.workspace = true
jackdaw_widgets.workspace = true
lucide-icons.workspace = true

[dev-dependencies]
bevy_internal.workspace = true

[lints]
workspace = true
