[package]
name = "jackdaw_geometry"
version = "0.4.0"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
slotmap = "1.0"
earcutr = "0.5"
bitflags = "2"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
jackdaw_jsn = { path = "../jackdaw_jsn" }

[lints]
workspace = true
