[package]
name = "jackdaw_geometry"
version = "0.4.1"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_reflect.workspace = true
bevy_math.workspace = true
bevy_asset.workspace = true
bevy_pbr.workspace = true
bevy_utils.workspace = true
slotmap = "1.0"
earcutr = "0.5"
cdt = "0.1"
bitflags = "2"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
jackdaw_jsn = { path = "../jackdaw_jsn" }

[lints]
workspace = true
