[package]
name = "jackdaw_jsn"
version = "0.4.1"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_reflect.workspace = true
bevy_asset.workspace = true
bevy_scene.workspace = true
bevy_math.workspace = true
bevy_camera.workspace = true
bevy_transform.workspace = true
bevy_log.workspace = true
bevy_utils.workspace = true
bevy_image.workspace = true
bevy_mesh.workspace = true
bevy_pbr.workspace = true
bevy_color.workspace = true
bevy_derive.workspace = true
bevy_render.workspace = true

jackdaw_geometry.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2"

[lints]
workspace = true
