[package]
name = "jackdaw_node_graph"
version = "0.4.1"
edition = "2024"
description = "Generic node-graph editor widget for the Jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"
include = ["src/**/*", "Cargo.toml", "LICENSE*"]

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_input.workspace = true
bevy_picking.workspace = true
bevy_ui.workspace = true
bevy_log.workspace = true
bevy_reflect.workspace = true
bevy_math.workspace = true
bevy_ui_render.workspace = true
bevy_color.workspace = true
bevy_utils.workspace = true
bevy_window.workspace = true
bevy_text.workspace = true
bevy_render.workspace = true
bevy_shader.workspace = true

bevy_monitors.workspace = true
bevy_enhanced_input.workspace = true
jackdaw_widgets.workspace = true
jackdaw_feathers.workspace = true
jackdaw_commands.workspace = true
jackdaw_jsn.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
bevy_internal.workspace = true
bevy_camera.workspace = true

[lints]
workspace = true
