[package]
name = "jackdaw_panels"
version = "0.4.1"
edition = "2024"
description = "Generic docking and panel management system for Bevy editors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_ui.workspace = true
bevy_asset.workspace = true
bevy_math.workspace = true
bevy_picking.workspace = true
bevy_color.workspace = true
bevy_utils.workspace = true
bevy_text.workspace = true
bevy_log.workspace = true
bevy_window.workspace = true
bevy_feathers.workspace = true
bevy_input.workspace = true
bevy_input_focus.workspace = true
bevy_time.workspace = true


serde.workspace = true
jackdaw_feathers.workspace = true
jackdaw_widgets.workspace = true
lucide-icons.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
