[package]
name = "jackdaw_remote"
version = "0.4.1"
edition = "2024"
description = "Remote game integration for the Jackdaw 3D level editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_transform.workspace = true
bevy_remote.workspace = true
bevy_log.workspace = true
bevy_reflect.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
