[package]
name = "jackdaw_runtime"
version = "0.4.1"
edition = "2024"
description = "Runtime scene loader for the Jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_reflect.workspace = true
bevy_image.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_transform.workspace = true
bevy_camera.workspace = true
bevy_log.workspace = true
bevy_scene.workspace = true

jackdaw_jsn.workspace = true
jackdaw_geometry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

[dev-dependencies]
bevy_internal.workspace = true
bevy_math.workspace = true

[lints]
workspace = true
