[package]
name = "jackdaw_sdk"
version = "0.4.1"
edition = "2024"
description = "Single proxy dylib shipped with jackdaw. Extensions link against this via `cargo rustc --extern bevy=libjackdaw_sdk.so --extern jackdaw_api=libjackdaw_sdk.so` so they share one compilation of bevy + jackdaw types with the editor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[lib]
# `dylib` produces `libjackdaw_sdk.so` with a stable filename (no
# metadata hash), which is what extensions' DT_NEEDED will point
# at. `lib` keeps the rlib form for rustc to read metadata during
# type-checking consumers.
crate-type = ["lib", "dylib"]

[dependencies]
bevy.workspace = true
jackdaw_api.workspace = true

[lints]
workspace = true
