[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
jackdaw = { version = "0.4", features = ["dylib"] }
serde = { version = "1", features = ["derive"] }
